Control the size of each pending batch to be no larger than maxSizePerBatch
Signed-off-by: OneSizeFitQuorum <tanxinyu@apache.org>