@@ -30,7 +30,7 @@ public class SyncStatus {
 
   private final MultiLeaderConfig config;
   private final IndexController controller;
-  private final List<PendingBatch> pendingBatches = new LinkedList<>();
+  private final LinkedList<PendingBatch> pendingBatches = new LinkedList<>();
 
   public SyncStatus(IndexController controller, MultiLeaderConfig config) {
     this.controller = controller;
@@ -80,7 +80,7 @@ public class SyncStatus {
       return 1
           + (pendingBatches.isEmpty()
               ? controller.getCurrentIndex()
-              : pendingBatches.get(pendingBatches.size() - 1).getEndIndex());
+              : pendingBatches.getLast().getEndIndex());
     }
   }
 
